Revised spacing, font issues, and added new image assets

--- a/src/scss/art.scss
+++ b/src/scss/art.scss
@@ -45,11 +45,11 @@
 
 			background: linear-gradient(
 				180deg,
-				rgba(255, 207, 85, 0.25) 0%,
-				rgba(255, 91, 121, 0.25) 48.44%,
-				rgba(172, 49, 216, 0.25) 100%
+				rgba(255, 207, 85, 0.3) 0%,
+				rgba(255, 91, 121, 0.3) 48.44%,
+				rgba(172, 49, 216, 0.3) 100%
 			);
-			filter: blur(80px);
+			filter: blur(96px);
 		}
 	}
 
@@ -58,7 +58,7 @@
 		left: 0;
 		width: 100%;
 		height: 64px;
-		background: rgba(16, 11, 38, 0.15);
+		background: rgba(16, 11, 38, 0.2);
 		backdrop-filter: blur(64px);
 
 		@include slabGenerators;
