--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,15 +14,17 @@
 	&__h1 {
 		text-align: center;
 		margin: 0 auto;
-		margin-bottom: 4rem;
+		margin-bottom: 3rem;
 		font-size: 2.5rem;
 		width: 100%;
+		color: $font-hue;
 
 		@media only screen and (min-width: $screen-sm) {
 			font-size: 3.5rem;
 		}
 
 		@media only screen and (min-width: $screen-md) {
+			margin-bottom: 4rem;
 			font-size: 4rem;
 		}
 
@@ -39,11 +41,11 @@
 		color: $tag-default-fg;
 	}
 
-	&__span {
-		display: inline-block;
-	}
-
 	&__connect {
-		margin-bottom: 6rem;
+		margin-bottom: 0;
+
+		@media only screen and (min-width: $screen-md) {
+			margin-bottom: 2rem;
+		}
 	}
 }
