--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,7 +16,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-size: 1rem;
-	letter-spacing: -0.02rem;
+	letter-spacing: -0.01em;
 }
 
 * {
@@ -24,10 +24,10 @@ body {
 }
 
 #root {
-	padding: 1.5rem 0;
+	padding: 4rem 0;
 
 	@media only screen and (min-width: $screen-md) {
-		padding: 8rem 0;
+		padding: 7rem 0 4rem;
 	}
 }
 
@@ -38,7 +38,7 @@ h3 {
 	line-height: 1.05;
 	font-weight: bold;
 	margin: 0;
-	letter-spacing: -0.1rem;
+	letter-spacing: -0.02em;
 }
 
 h1 {
@@ -68,7 +68,7 @@ h3 {
 		margin-bottom: 6rem;
 
 		@media only screen and (min-width: $screen-md) {
-			margin-bottom: 12.25rem;
+			margin-bottom: 12rem;
 		}
 	}
 }
@@ -80,6 +80,7 @@ h3 {
 	width: 100%;
 	height: 100%;
 	background-color: $tag-default-bg;
+	object-fit: cover;
 
 	&__wrapper {
 		position: relative;
